--- a/src/Client/assets/css/style.css
+++ b/src/Client/assets/css/style.css
@@ -196,7 +196,6 @@
   .h3 {
     color: var(--eerie-black-1);
     font-family: var(--ff-league_spartan);
-    line-height: 1;
   }
   
   .h1,
@@ -301,115 +300,116 @@
   
   /*-----------------------------------*\
     #HEADER
-  \*-----------------------------------*/
-  
-  .header .btn { display: none; }
-  
-  .header {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    background-color: var(--white);
-    padding-block: 12px;
-    box-shadow: var(--shadow-1);
-    z-index: 4;
-  }
-  
-  .header.active { position: fixed; }
-  
-  .header .container,
-  .header-actions,
-  .navbar .wrapper {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    gap: 15px;
-  }
-  
-  .header-action-btn,
-  .nav-close-btn {
-    position: relative;
-    color: var(--eerie-black-1);
-    font-size: 24px;
-    transition: var(--transition-1);
-  }
-  
-  .header-action-btn:is(:hover, :focus) { color: var(--kappel); }
-  
-  .header-action-btn .btn-badge {
-    position: absolute;
-    top: -10px;
-    right: -10px;
-    background-color: var(--kappel);
-    color: var(--white);
-    font-family: var(--ff-league_spartan);
-    font-size: var(--fs-6);
-    min-width: 20px;
-    height: 20px;
-    border-radius: var(--radius-circle);
-  }
-  
-  .navbar {
-    position: fixed;
-    top: 0;
-    left: -320px;
-    background-color: var(--white);
-    width: 100%;
-    max-width: 320px;
-    height: 100%;
-    z-index: 2;
-    transition: 0.25s var(--cubic-in);
-  }
-  
-  .navbar.active {
-    transform: translateX(320px);
-    transition: 0.5s var(--cubic-out);
-  }
-  
-  .navbar .wrapper {
-    padding: 15px 20px;
-    border-block-end: 1px solid var(--platinum);
-  }
-  
-  .nav-close-btn {
-    background-color: var(--white);
-    box-shadow: var(--shadow-2);
-    padding: 8px;
-    border-radius: var(--radius-circle);
-  }
-  
-  .nav-close-btn:is(:hover, :focus) {
-    background-color: var(--kappel);
-    color: var(--white);
-  }
-  
-  .navbar-list { padding: 15px 20px; }
-  
-  .navbar-item:not(:last-child) { border-block-end: 1px solid var(--platinum); }
-  
-  .navbar-link {
-    padding-block: 8px;
-    font-weight: var(--fw-500);
-    transition: var(--transition-1);
-  }
-  
-  .navbar-link:is(:hover, :focus) { color: var(--kappel); }
-  
-  .overlay {
-    position: fixed;
-    inset: 0;
-    background-color: var(--black_80);
-    pointer-events: none;
-    opacity: 0;
-    z-index: 1;
-    transition: var(--transition-1);
-  }
-  
-  .overlay.active {
-    opacity: 1;
-    pointer-events: all;
-  }
+\*-----------------------------------*/
+
+.header .btn { display: none; }
+
+.header {
+  position: fixed; /* Changed from absolute to fixed */
+  top: 0;
+  left: 0;
+  width: 100%;
+  background-color: var(--white);
+  padding-block: 12px;
+  box-shadow: var(--shadow-1);
+  z-index: 4;
+}
+
+.header.active { position: fixed; }
+
+.header .container,
+.header-actions,
+.navbar .wrapper {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  gap: 15px;
+}
+
+.header-action-btn,
+.nav-close-btn {
+  position: relative;
+  color: var(--eerie-black-1);
+  font-size: 24px;
+  transition: var(--transition-1);
+}
+
+.header-action-btn:is(:hover, :focus) { color: var(--kappel); }
+
+.header-action-btn .btn-badge {
+  position: absolute;
+  top: -10px;
+  right: -10px;
+  background-color: var(--kappel);
+  color: var(--white);
+  font-family: var(--ff-league_spartan);
+  font-size: var(--fs-6);
+  min-width: 20px;
+  height: 20px;
+  border-radius: var(--radius-circle);
+}
+
+.navbar {
+  position: fixed;
+  top: 0;
+  left: -320px;
+  background-color: var(--white);
+  width: 100%;
+  max-width: 320px;
+  height: 100%;
+  z-index: 2;
+  transition: 0.25s var(--cubic-in);
+}
+
+.navbar.active {
+  transform: translateX(320px);
+  transition: 0.5s var(--cubic-out);
+}
+
+.navbar .wrapper {
+  padding: 15px 20px;
+  border-block-end: 1px solid var(--platinum);
+}
+
+.nav-close-btn {
+  background-color: var(--white);
+  box-shadow: var(--shadow-2);
+  padding: 8px;
+  border-radius: var(--radius-circle);
+}
+
+.nav-close-btn:is(:hover, :focus) {
+  background-color: var(--kappel);
+  color: var(--white);
+}
+
+.navbar-list { padding: 15px 20px; }
+
+.navbar-item:not(:last-child) { border-block-end: 1px solid var(--platinum); }
+
+.navbar-link {
+  padding-block: 8px;
+  font-weight: var(--fw-500);
+  transition: var(--transition-1);
+}
+
+.navbar-link:is(:hover, :focus) { color: var(--kappel); }
+
+.overlay {
+  position: fixed;
+  inset: 0;
+  background-color: var(--black_80);
+  pointer-events: none;
+  opacity: 0;
+  z-index: 1;
+  transition: var(--transition-1);
+}
+
+.overlay.active {
+  opacity: 1;
+  pointer-events: all;
+}
+
   
   
   
@@ -570,122 +570,219 @@
   
   
   
-  /*-----------------------------------*\
-    #COURSE
-  \*-----------------------------------*/
+/*-----------------------------------*\
+  #COURSE
+\*-----------------------------------*/
+
+.course { background-color: var(--isabelline); }
+
+.course-card {
+  position: relative;
+  background-color: var(--white);
+  border-radius: var(--radius-5);
+  overflow: hidden;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  height: 100%;
+}
+
+.course-card .img-cover {
+  transition: var(--transition-2);
+  width: 100%;
+  height: auto;
+}
+
+.course-card:is(:hover, :focus-within) .img-cover {
+  transform: scale(1.1);
+}
+
+.course-card :is(.abs-badge, .badge) {
+  font-family: var(--ff-league_spartan);
+  border-radius: var(--radius-3);
+}
+
+.course-card .abs-badge {
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  background-color: var(--selective-yellow);
+  color: var(--white);
+  display: flex;
+  align-items: center;
+  gap: 5px;
+  line-height: 1;
+  padding: 6px 8px;
+  padding-block-end: 3px;
+}
+
+.course-card .abs-badge ion-icon {
+  font-size: 18px;
+  margin-block-end: 5px;
+  --ionicon-stroke-width: 50px;
+}
+
+.course-card .card-content {
+  padding: 25px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  flex-grow: 1;
+}
+
+.course-card .badge {
+  background-color: var(--kappel_15);
+  max-width: max-content;
+  color: var(--kappel);
+  line-height: 25px;
+  padding-inline: 10px;
+}
+
+.course-card .card-title {
+  display: -webkit-box;
+  -webkit-box-orient: vertical;
+  -webkit-line-clamp: 2;
+  overflow: hidden;
+  margin-block: 15px 8px;
+  transition: var(--transition-1);
+}
+
+.course-card .card-title:is(:hover, :focus) {
+  color: var(--kappel);
+}
+
+.course-card :is(.wrapper, .rating-wrapper, .card-meta-list, .card-meta-item) {
+  display: flex;
+  align-items: center;
+}
+
+.course-card .wrapper {
+  gap: 10px;
+}
+
+.course-card .rating-wrapper {
+  gap: 3px;
+}
+
+.course-card .rating-wrapper ion-icon {
+  color: var(--selective-yellow);
+}
+
+.course-card .rating-text {
+  color: var(--eerie-black-1);
+  font-size: var(--fs-6);
+  font-weight: var(--fw-500);
+}
+
+.course-card .price {
+  color: var(--radical-red);
+  font-family: var(--ff-league_spartan);
+  font-size: var(--fs-4);
+  font-weight: var(--fw-600);
+  margin-block: 8px 15px;
+}
+
+.course-card .card-meta-list {
+  flex-wrap: wrap;
+}
+
+.course-card .card-meta-item {
+  position: relative;
+  gap: 5px;
+}
+
+.course-card .card-meta-item:not(:last-child)::after {
+  content: "|";
+  display: inline-block;
+  color: var(--platinum);
+  padding-inline: 10px;
+}
+
+.course-card .card-meta-item ion-icon {
+  color: var(--quick-silver);
+  --ionicon-stroke-width: 50px;
+}
+
+.course-card .card-meta-item .span {
+  color: var(--eerie-black-1);
+  font-size: var(--fs-7);
+}
+
+.course .btn {
+  margin-inline: auto;
+  margin-block-start: 60px;
+}
+
+/* Search bar styles */
+.search-bar-container {
+  margin-block: 20px;
+  text-align: center;
+}
+
+.search-bar {
+  border: 1px solid #27b889;
+  border-radius: var(--radius-5);
+  padding: 10px;
+  width: 100%;
+  max-width: 400px;
+  outline: none;
+  color: #27b889;
+  font-size: var(--fs-6);
+}
+
+.search-bar::placeholder {
+  color: #27b889;
+  font-style: italic;
+}
+
+.search-bar:focus {
+  border-color: #27b889;
+  box-shadow: 0 0 5px rgba(39, 184, 137, 0.5);
+}
+
+/* Pagination styles */
+.pagination {
+  display: flex;
+  justify-content: center;
+  padding: 1rem 0;
+  list-style: none;
   
-  .course { background-color: var(--isabelline); }
-  
-  .course-card {
-    position: relative;
-    background-color: var(--white);
-    border-radius: var(--radius-5);
-    overflow: hidden;
-  }
-  
-  .course-card .img-cover { transition: var(--transition-2); }
-  
-  .course-card:is(:hover, :focus-within) .img-cover { transform: scale(1.1); }
-  
-  .course-card :is(.abs-badge, .badge) {
-    font-family: var(--ff-league_spartan);
-    border-radius: var(--radius-3);
-  }
-  
-  .course-card .abs-badge {
-    position: absolute;
-    top: 10px;
-    right: 10px;
-    background-color: var(--selective-yellow);
-    color: var(--white);
-    display: flex;
-    align-items: center;
-    gap: 5px;
-    line-height: 1;
-    padding: 6px 8px;
-    padding-block-end: 3px;
-  }
-  
-  .course-card .abs-badge ion-icon {
-    font-size: 18px;
-    margin-block-end: 5px;
-    --ionicon-stroke-width: 50px;
-  }
-  
-  .course-card .card-content { padding: 25px; }
-  
-  .course-card .badge {
-    background-color: var(--kappel_15);
-    max-width: max-content;
-    color: var(--kappel);
-    line-height: 25px;
-    padding-inline: 10px;
-  }
-  
-  .course-card .card-title {
-    display: -webkit-box;
-    -webkit-box-orient: vertical;
-    -webkit-line-clamp: 2;
-    overflow: hidden;
-    margin-block: 15px 8px;
-    transition: var(--transition-1);
-  }
-  
-  .course-card .card-title:is(:hover, :focus) { color: var(--kappel); }
-  
-  .course-card :is(.wrapper, .rating-wrapper, .card-meta-list, .card-meta-item) {
-    display: flex;
-    align-items: center;
-  }
-  
-  .course-card .wrapper { gap: 10px; }
-  
-  .course-card .rating-wrapper { gap: 3px; }
-  
-  .course-card .rating-wrapper ion-icon { color: var(--selective-yellow); }
-  
-  .course-card .rating-text {
-    color: var(--eerie-black-1);
-    font-size: var(--fs-6);
-    font-weight: var(--fw-500);
-  }
-  
-  .course-card .price {
-    color: var(--radical-red);
-    font-family: var(--ff-league_spartan);
-    font-size: var(--fs-4);
-    font-weight: var(--fw-600);
-    margin-block: 8px 15px;
-  }
-  
-  .course-card .card-meta-list { flex-wrap: wrap; }
-  
-  .course-card .card-meta-item {
-    position: relative;
-    gap: 5px;
-  }
-  
-  .course-card .card-meta-item:not(:last-child)::after {
-    content: "|";
-    display: inline-block;
-    color: var(--platinum);
-    padding-inline: 10px;
-  }
-  
-  .course-card .card-meta-item ion-icon {
-    color: var(--quick-silver);
-    --ionicon-stroke-width: 50px;
-  }
-  
-  .course-card .card-meta-item .span {
-    color: var(--eerie-black-1);
-    font-size: var(--fs-7);
-  }
-  
-  .course .btn {
-    margin-inline: auto;
-    margin-block-start: 60px;
-  }
+}
+
+.pagination li {
+  margin: 0 0.5rem;
+}
+
+.pagination li a {
+  padding: 0.5rem 1rem;
+  border: 1px solid #ddd;
+  border-radius: 4px;
+  color: #27b889;
+  text-decoration: none;
+  display: flex;
+  align-items: center;
+  height: 40px;
+}
+
+.pagination li.active a {
+  background-color: #27b889;
+  color: white;
+}
+
+.pagination li.prev a,
+.pagination li.next a {
+  padding: 0.7rem;
+}
+
+.animate-form {
+  animation: slideInForm 1s forwards;
+}
+
+.animate-icon {
+  animation: fadeInIcon 1s forwards;
+}
+
+
   
   
   
@@ -790,6 +887,10 @@
     box-shadow: var(--shadow-3);
     margin-block-start: -100px;
     z-index: 1;
+    height: 300px; /* Ajustez cette valeur en fonction de vos besoins */
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
   }
   
   .blog-card .card-btn {
@@ -828,7 +929,7 @@
   .blog-card :is(.card-meta-list, .card-meta-item) { display: flex; }
   
   .blog-card .card-meta-list {
-    flex-wrap: wrap;
+    
     gap: 10px 20px;
     margin-block-end: 20px;
   }
@@ -845,7 +946,19 @@
     --ionicon-stroke-width: 40px;
   }
   
-  
+  .blog-card .badge {
+    background-color: var(--kappel_15);
+    max-width: max-content;
+    color: var(--kappel);
+    line-height: 25px;
+    padding-inline: 10px;
+  }
+  .blog-card .card-meta-item:not(:last-child)::after {
+    content: "|";
+    display: inline-block;
+    color: var(--platinum);
+    padding-inline: 10px;
+  }
   
   
   
@@ -884,7 +997,9 @@
     font-size: var(--fs-3);
     font-weight: var(--fw-600);
     margin-block-end: 10px;
+    white-space: nowrap; /* Ajoute cette ligne pour empêcher le titre de se diviser en plusieurs lignes */
   }
+  
   
   .footer-list .footer-link { padding-block: 5px; }
   
