--- a/src/Client/assets/css/style.css
+++ b/src/Client/assets/css/style.css
@@ -470,6 +470,7 @@
     padding: 50px 30px;
     text-align: center;
     border-radius: var(--radius-5);
+    height: 470px;
   }
   
   .category-card .card-icon {
@@ -705,7 +706,6 @@
 
 .course-card .card-meta-item .span {
   color: var(--eerie-black-1);
-  font-size: var(--fs-7);
 }
 
 .course .btn {
@@ -859,106 +859,128 @@
   
   
   
-  /*-----------------------------------*\
-    #BLOG
-  \*-----------------------------------*/
-  
-  .blog-card .card-banner { border-radius: var(--radius-10); }
-  
-  .blog-card .card-banner .img-cover { transition: var(--transition-2); }
-  
-  .blog-card .card-banner::after {
-    inset: 0;
-    background-color: var(--black_50);
-    opacity: 0;
-    transition: var(--transition-1);
-  }
-  
-  .blog-card:is(:hover, :focus-within) .card-banner .img-cover { transform: scale(1.1); }
-  
-  .blog-card:is(:hover, :focus-within) .card-banner::after { opacity: 1; }
-  
-  .blog-card .card-content {
-    position: relative;
-    margin-inline: 15px;
-    background-color: var(--white);
-    padding: 20px;
-    border-radius: var(--radius-10);
-    box-shadow: var(--shadow-3);
-    margin-block-start: -100px;
-    z-index: 1;
-    height: 300px; /* Ajustez cette valeur en fonction de vos besoins */
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-  }
-  
-  .blog-card .card-btn {
-    position: absolute;
-    top: -40px;
-    right: 30px;
-    background-color: var(--kappel);
-    color: var(--white);
-    font-size: 20px;
-    padding: 20px;
-    border-radius: var(--radius-circle);
-    transition: var(--transition-1);
-    opacity: 0;
-  }
-  
-  .blog-card .card-btn:is(:hover, :focus) { background-color: var(--radical-red); }
-  
-  .blog-card:is(:hover, :focus-within) .card-btn {
-    opacity: 1;
-    transform: translateY(10px);
-  }
-  
-  .blog-card :is(.card-meta-item, .card-text, .card-subtitle) {
-    font-size: var(--fs-5);
-  }
-  
-  .blog-card .card-subtitle { text-transform: uppercase; }
-  
-  .blog-card .card-title {
-    margin-block: 10px 15px;
-    transition: var(--transition-1);
-  }
-  
-  .blog-card .card-title:is(:hover, :focus) { color: var(--kappel); }
-  
-  .blog-card :is(.card-meta-list, .card-meta-item) { display: flex; }
-  
-  .blog-card .card-meta-list {
-    
-    gap: 10px 20px;
-    margin-block-end: 20px;
-  }
-  
-  .blog-card .card-meta-item {
-    gap: 10px;
-    align-items: center;
-    color: var(--eerie-black-1);
-  }
-  
-  .blog-card .card-meta-item ion-icon {
-    color: var(--kappel);
-    font-size: 18px;
-    --ionicon-stroke-width: 40px;
-  }
-  
-  .blog-card .badge {
-    background-color: var(--kappel_15);
-    max-width: max-content;
-    color: var(--kappel);
-    line-height: 25px;
-    padding-inline: 10px;
-  }
-  .blog-card .card-meta-item:not(:last-child)::after {
-    content: "|";
-    display: inline-block;
-    color: var(--platinum);
-    padding-inline: 10px;
-  }
+/*-----------------------------------*\
+#BLOG
+\*-----------------------------------*/
+
+.blog-card .card-banner { border-radius: var(--radius-10); }
+
+.blog-card .card-banner .img-cover { transition: var(--transition-2); }
+
+.blog-card .card-banner::after {
+  inset: 0;
+  background-color: var(--black_50);
+  opacity: 0;
+  transition: var(--transition-1);
+}
+
+.blog-card:is(:hover, :focus-within) .card-banner .img-cover { transform: scale(1.1); }
+
+.blog-card:is(:hover, :focus-within) .card-banner::after { opacity: 1; }
+
+.blog-card .card-content {
+  position: relative;
+  margin-inline: 15px;
+  background-color: var(--white);
+  padding: 20px;
+  border-radius: var(--radius-10);
+  box-shadow: var(--shadow-3);
+  margin-block-start: -100px;
+  z-index: 1;
+  height: 200px; 
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+.blog-card .card-btn {
+  position: absolute;
+  top: -40px;
+  right: 30px;
+  background-color: var(--kappel);
+  color: var(--white);
+  font-size: 20px;
+  padding: 20px;
+  border-radius: var(--radius-circle);
+  transition: var(--transition-1);
+  opacity: 0;
+}
+
+.blog-card .card-btn:is(:hover, :focus) { background-color: var(--radical-red); }
+
+.blog-card:is(:hover, :focus-within) .card-btn {
+  opacity: 1;
+  transform: translateY(10px);
+}
+
+.blog-card :is(.card-meta-item, .card-text, .card-subtitle) {
+  font-size: var(--fs-5);
+}
+
+.blog-card .card-subtitle { text-transform: uppercase; }
+
+.blog-card .card-title {
+  margin-block: 10px 15px;
+  transition: var(--transition-1);
+}
+
+.blog-card .card-title:is(:hover, :focus) { color: var(--kappel); }
+
+.blog-card :is(.card-meta-list, .card-meta-item) { display: flex; }
+
+.blog-card .card-meta-list {
+  gap: 10px 20px;
+  margin-block-end: 20px;
+}
+
+.blog-card .card-meta-item {
+  gap: 10px;
+  align-items: center;
+  color: var(--eerie-black-1);
+}
+
+.blog-card .card-meta-item ion-icon {
+  color: var(--kappel);
+  font-size: 18px;
+  --ionicon-stroke-width: 40px;
+}
+
+.blog-card .badge {
+  background-color: var(--kappel_15);
+  max-width: max-content;
+  color: var(--kappel);
+  line-height: 25px;
+  padding-inline: 10px;
+}
+.blog-card .card-meta-item:not(:last-child)::after {
+  content: "|";
+  display: inline-block;
+  color: var(--platinum);
+  padding-inline: 10px;
+}
+
+
+.blog-card .abs-badge {
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  background-color: var(--selective-yellow);
+  color: var(--white);
+  display: flex;
+  align-items: center;
+  gap: 5px;
+  line-height: 1;
+  padding: 6px 8px;
+  padding-block-end: 3px;
+  font-family: var(--ff-league_spartan);
+  border-radius: var(--radius-3);
+}
+
+.blog-card .abs-badge ion-icon {
+  font-size: 18px;
+  margin-block-end: 5px;
+  --ionicon-stroke-width: 50px;
+}
   
   
   
@@ -1000,7 +1022,6 @@
     white-space: nowrap; /* Ajoute cette ligne pour empêcher le titre de se diviser en plusieurs lignes */
   }
   
-  
   .footer-list .footer-link { padding-block: 5px; }
   
   .newsletter-form { margin-block: 20px 35px; }
@@ -1036,8 +1057,89 @@
     display: inline-block;
   }
   
+/* Contact form styles */
+.contact-form {
+  display: flex;
+  flex-direction: column;
+}
+
+.contact-form .input-container {
+  position: relative;
+  margin-bottom: 15px;
+}
+
+.contact-form .input-field {
+  width: 100%;
+  padding: 10px 20px;
+  border: 1px solid #ced4da;
+  border-radius: 7px;
+  outline: none;
+  background-color: var(--white);
+}
+
+.contact-form .input-icon {
+  position: absolute;
+  top: 50%;
+  left: 10px;
+  transform: translateY(-50%);
+  color: #6c757d;
+}
+
+.contact-form .input-field:focus {
+  border-color: var(--kappel);
+}
+
+.contact-form .contact-btn {
+  padding: 10px 20px;
+  border: none;
+  border-radius: 7px;
+  background-color: var(--kappel);
+  color: #fff;
+  cursor: pointer;
+  font-size: 16px;
+  font-weight: bold;
+  width: 100%;
+  text-align: center;
+}
+
+.contact-form .contact-btn:hover {
+  background-color: var(--kappel-dark);
+}
+
   
-  
+  /*-----------------------------------*\
+    #PARTNERS
+\*-----------------------------------*/
+
+.section.partners {
+  padding: 50px 0;
+  background-color: var(--white);
+  text-align: center;
+}
+
+.partner-list {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+  list-style: none;
+  padding: 0;
+  margin: 0;
+}
+
+.partner-logo {
+  max-width: 240px;
+  transition: transform 0.3s ease;
+}
+
+.partner-logo:hover {
+  transform: scale(1.1);
+}
+
+.h2.section-title {
+  margin-bottom: 80px;
+}
+
   
   
   /*-----------------------------------*\
@@ -1449,7 +1551,69 @@
       z-index: -1;
     }
   
-  
+ /* Custom styles for the popups */
+.modal-overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.5);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  z-index: 1050;
+}
+
+.modal-content {
+  background: #fff;
+  border-radius: 5px;
+  max-width: 500px;
+  width: 80%;
+  padding: 20px;
+  position: relative;
+  box-shadow: 0 5px 15px rgba(0, 0, 0, 0.5);
+}
+
+.modal-header,
+.modal-footer {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.modal-title {
+  margin: 0;
+}
+
+.close {
+  font-size: 1.5rem;
+  font-weight: bold;
+  color: #000;
+  cursor: pointer;
+  border: none;
+  background: none;
+}
+
+.modal-body {
+  margin: 20px 0;
+}
+
+
+
+.success-message {
+  color: #27b889;
+  font-size: 1.5rem;
+  font-weight: bold;
+  text-align: center;
+  margin: 20px 0;
+}
+
+.blog-card,
+.course-card {
+  cursor: pointer;
+}
+
   
     /**
      * ABOUT
@@ -1502,3 +1666,5 @@
     }
   
   }
+
+  
